@@ -162,7 +162,7 @@ _hasNativeMulFor (iCode *ic, sym_link *left, sym_link *right)
     case '%':
       return (result_size <= 1 && getSize (left) <= 1 && IS_UNSIGNED (left) && getSize (right) <= 1 && IS_UNSIGNED (right));
     case '*':
-      return (result_size == 1 || getSize (left) <= 1 && getSize (right) <= 1 && result_size == 2);
+      return (result_size == 1 || getSize (left) <= 1 && getSize (right) <= 1 && result_size == 2 && IS_UNSIGNED (left) && IS_UNSIGNED (right));
     default:
       return FALSE;
     }
